added reset button and alternate X and 0

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -8,7 +8,8 @@
         border: solid 1px black;
         height: 100px;
         width: 100px;
-        text-align: center
+        text-align: center;
+        font-size: 50px
       }
     </style>
   </head>
@@ -32,7 +33,7 @@
         </tr>
     </table>
     <h3>Winner: </h3>
-    <button>Reset</button>
+    <button onclick="reset()">Reset</button>
     <script src='app.js'></script>
   </body>
 </html>
