--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>CSV Report Generator</title>
+    <style>
+       textarea {
+           height: 400px;
+           width: 400px
+       }
+    </style>
+</head>
+<body>
+    <h1>CSV Report Generator</h1>
+    <form method="POST" action="/">
+        <label>Input JSON data here: </label>
+        <textarea></textarea>
+        <button>Submit</button>
+    </form>
+    
+</body>
+</html>
 
