--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -3,64 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
-    <style>
-      html {
-        background: no-repeat linear-gradient(rgb(255,244,191), rgb(104,188,235));
-        background-size: cover
-      }
-      body {
-        display: flex;
-        justify-content: center;
-        margin: auto;
-        text-align: center
-      }
-      td {
-        border: solid 1px black;
-        height: 150px;
-        width: 150px;
-        text-align: center;
-        font-size: 75px
-      }
-      button {
-        margin-bottom: 200px;
-        padding: 10px 20px;
-        border-radius: 5px;
-        font-size: 25px;
-        color: white;
-        background-color: rgb(71,108,235);
-        border: solid 1px black
-      }
-      #victory {
-        font-size: 40px;
-      }
-      h1 {
-        font-size: 50px;
-      }
-      .square {
-        color: rgb(71,108,235);
-      }
-      h3 {
-        font-size: 25px;
-      }
-      table {
-        margin-top: 20px;
-      }
-      .score {
-        float: inline-start;
-        border: solid 1px black;
-        text-align: center;
-        border-radius: 10px;
-        background-color: rgb(71,108,235);
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body class="container">
     <div class="wrapper">
     <h1>Tic Tac Toe</h1>
     <div>
+      <div class="names">
+        <div>
+          <label>Player X Name: </label>
+          <input class="player" id="player1" onchange="console.log(event.target.value)" value="" type="text" placeholder="Enter Name">
+          <button onclick=setName() >Submit</button>
+      </div>
+        <div>
+          <label>Player O Name: </label>
+          <input class="player" id="player2" onchange="console.log(event.target.value)" value="" type="text" placeholder="Enter Name">
+          <button onclick=setName() >Submit</button>
+      </div>
+      </div>
     <div class="score">
-      <h3 id="prevwinner">Previous Winner: </h3>
+      <h3 id="prevwinner">Previous Winner:   </h3>
       <h3 id="xwins">X Wins: </h3>
       <h3 id="owins">O Wins: </h3>
     </div>
@@ -83,7 +45,7 @@
       </div>
     </table>
     <h3 id="victory"></h3>
-    <button onclick="reset()">Reset</button>
+    <button class="btn" onclick="reset()">Reset</button>
     <script src='app.js'></script>
   </body>
 </html>
